--- a/meltano.yml
+++ b/meltano.yml
@@ -284,7 +284,8 @@ plugins:
     pip_url: git+https://gitlab.com/meltano/dashboard-adwords.git
   orchestrators:
   - name: airflow
-    pip_url: psycopg2 apache-airflow==1.10.14 --constraint https://raw.githubusercontent.com/apache/airflow/constraints-1.10.14/constraints-3.6.txt
+    # downloaded constrains from https://raw.githubusercontent.com/apache/airflow/constraints-1.10.14/constraints-3.6.txt
+    pip_url: psycopg2 apache-airflow==1.10.14 --constraint airflow-constraints-3.6.txt
   transformers:
   - name: dbt
     pip_url: dbt==0.16.1
