--- a/meltano.yml
+++ b/meltano.yml
@@ -285,6 +285,7 @@ plugins:
   orchestrators:
   - name: airflow
     # downloaded constrains from https://raw.githubusercontent.com/apache/airflow/constraints-1.10.14/constraints-3.6.txt
+    # and edited https://stackoverflow.com/a/66789969
     pip_url: psycopg2 apache-airflow==1.10.14 --constraint airflow-constraints-3.6.txt
   transformers:
   - name: dbt
